--- a/scss/layout/_about.scss
+++ b/scss/layout/_about.scss
@@ -1,6 +1,6 @@
 /* About Page */
 #page-header.about-header {
-  background-image: url("/img/about/banner.png");
+  background-image: url("../img/about/banner.png");
 }
 
 #about-head  {
