--- a/scss/layout/_index.scss
+++ b/scss/layout/_index.scss
@@ -59,7 +59,7 @@
 
 // hero section
 #hero {
-  background-image: url("/img/hero4.png");
+  background-image: url(../img/hero4.png);
   height: 90vh;
   width: 100%;
   background-size: cover;
@@ -79,7 +79,7 @@
   }
   
   & button {
-    background-image: url("/img/button.png");
+    background-image: url("../img/button.png");
     background-color: transparent;
     color: #088178;
     border: 0;
@@ -237,7 +237,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  background-image: url("/img/banner/b2.jpg");
+  background-image: url("../img/banner/b2.jpg");
   width: 100%;
   height: 40vh;
   background-size: cover;
@@ -278,7 +278,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: flex-start;
-  background-image: url("/img/banner/b17.jpg");
+  background-image: url("../img/banner/b17.jpg");
   min-width: 45%;
   height: 50vh;
   background-size: cover;
@@ -287,7 +287,7 @@
   }
   
   & .banner-box2 {
-    background-image: url("/img/banner/b10.jpg");
+    background-image: url("../img/banner/b10.jpg");
   }
 
   & h4 {
@@ -331,7 +331,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: flex-start;
-    background-image: url("/img/banner/b7.jpg");
+    background-image: url("../img/banner/b7.jpg");
     min-width: 30%;
     height: 30vh;
     background-size: cover;
@@ -341,11 +341,11 @@
   }
 
   & .banner-box2 {
-    background-image: url("/img/banner/b4.jpg");
+    background-image: url("../img/banner/b4.jpg");
   }
   
   & .banner-box3 {
-    background-image: url("/img/banner/b18.jpg");
+    background-image: url("../img/banner/b18.jpg");
   }
   
   & h2 {
@@ -368,7 +368,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: center; 
-  background-image: url("/img/banner/b14.png");
+  background-image: url("../img/banner/b14.png");
   background-repeat: no-repeat;
   background-position: 20% 30%;
   background-color: #041e42;
